# brickpack-sampleapp

./: .dockerignore  Cargo.toml  Dockerfile  Insomnia.json  Makefile  README.md  deny.toml  docker-compose.yml
scripts/: build.sh  deploy.sh  run.sh
src/: main.rs
src/api/: mod.rs
src/api/add_user/: mod.rs  model.rs  view.rs
src/api/del_user/: mod.rs  model.rs  view.rs
src/api/groups/: presenter.rs
src/api/show_posts/: model.rs  presenter.rs  view.rs
src/api/show_users/: mod.rs  model.rs  presenter.rs  view.rs
src/api/users/: presenter.rs
