[package]
name = "brickpack-sampleapp"
version = "0.9.6"
authors = ["Antonio Feitosa <antonio.cfc@gmail.com>"]
edition = "2018"

[dependencies]

brickpack = { git = 'https://github.com/afsec/brickpack/', branch = "main"}
brickpack_derive = { git = 'https://github.com/afsec/brickpack/', branch = "main" }

# brickpack = { path = '/home/user/src/brickpack/brickpack/'}
# brickpack_derive = { path = '/home/user/src/brickpack/brickpack_derive/'}

tide = "0.15.0"
async-std = { version = "1.7.0", features = ["attributes"] }
serde = { version = "1.0.117", features = ["derive"] }
clap = "2.33.3"
serde_json = "1.0.59"

# surf = { version = "2.1.0", default-features = false, features = ["h1-client"] }
