[package]
name = "brickpack-sampleapp"
version = "0.9.8"
authors = ["Antonio Feitosa <antonio.cfc@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]

brickpack = { version = '0.9.8', git = 'https://github.com/afsec/brickpack/', branch = "main" }
brickpack_derive = { version = '0.9.8', git = 'https://github.com/afsec/brickpack/', branch = "main" }

#brickpack = { path = '../brickpack/brickpack/' }
#brickpack_derive = { path = '../brickpack/brickpack_derive/' }

tide = "0.16.0"
async-std = { version = "1.9.0", features = ["attributes"] }
serde = { version = "1.0.123", features = ["derive"] }
clap = "2.33.3"
serde_json = "1.0.64"

# surf = { version = "2.1.0", default-features = false, features = ["h1-client"] }
